--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,13 @@
       <repository>
         <id>releases</id>
         <name>Releases</name>
-        <url>http://localhost:8088/repository/maven-releases/</url>
+        <url>http://localhost:8080/nexus-2.14.1-01/content/repositories/releases/</url>
     </repository>
 
     <snapshotRepository>
         <id>snapshots</id>
         <name>Snapshots</name>
-        <url>http://localhost:8088/repository/maven-snapshots/</url>
+        <url>http://localhost:8080/nexus-2.14.1-01/content/repositories/snapshots/</url>
     </snapshotRepository>
 </distributionManagement>
 	  
