--- a/pom.xml
+++ b/pom.xml
@@ -30,16 +30,12 @@
         </developer>
     </developers>
     <distributionManagement>
-      <repository>
-        <id>releases</id>
-        <name>Releases</name>
-        <url>http://http://127.0.0.1:8080/nexus-2.14.1-01/content/repositories/releases//</url>
-    </repository>
+    
 
     <snapshotRepository>
         <id>snapshots</id>
         <name>snapshots</name>
-        <url>http://http://127.0.0.1:8080/nexus-2.14.1-01/content/repositories/snapshots//</url>
+        <url>http://localhost:8080/nexus-2.14.1-01/content/repositories/snapshots//</url>
     </snapshotRepository>
 </distributionManagement>
 	  
