--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     
 
     <snapshotRepository>
-        <id>snapshots</id>
+        <id>Apache Snapshots</id>
         <name>snapshots</name>
         <url>http://localhost:8081/nexus-2.14.2-01/content/repositories/snapshots/</url>
     </snapshotRepository>
